--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-# JDBC URL ejemplo para MySQL
+
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/posdb?serverTimezone=UTC&useSSL=false
+db.host=localhost
+db.port=3306
+db.name=posprojectbd
 db.user=root
 db.password=
+db.url=jdbc:mysql://${db.host}:${db.port}/${db.name}?serverTimezone=UTC&useSSL=false
