--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-
 db.driver=com.mysql.cj.jdbc.Driver
 db.host=localhost
 db.port=3306
-db.name=posprojectbd
+db.name=posdb
 db.user=root
 db.password=
-db.url=jdbc:mysql://${db.host}:${db.port}/${db.name}?serverTimezone=UTC&useSSL=false
+db.url=jdbc:mysql://localhost:3306/posdb?serverTimezone=UTC&useSSL=false
