--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ db.port=3306
 db.name=posdb
 db.user=root
 db.password=
-db.url=jdbc:mysql://localhost:3306/posdb?serverTimezone=UTC&useSSL=false
+db.url=jdbc:mysql://localhost:3306/posprojectbd?serverTimezone=UTC&useSSL=false
