--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 db.driver=com.mysql.cj.jdbc.Driver
 db.host=localhost
 db.port=3306
-db.name=posdb
+db.name=posprojectbd
 db.user=root
 db.password=
 db.url=jdbc:mysql://localhost:3306/posprojectbd?serverTimezone=UTC&useSSL=false
+javafx.version=21.0.6
